<resources>
    <string name="app_name">Escapepod</string>
    <string name="app_version_name" translatable="false">\"Mein Neues Hobby\"</string>
    <string name="fragment_settings_title">Settings</string>
    <string name="dialog_add_podcast_button">Add</string>
    <string name="dialog_add_podcast_howto">Please enter a podcast feed address. Look for the RSS symbol on the homepage of the respective podcast.</string>
    <string name="dialog_add_podcast_input_hint">Enter podcast feed link</string>
    <string name="dialog_add_podcast_title">Add New Podcast</string>
    <string name="dialog_all_episodes_list_title">All episodes | streaming only</string>
    <string name="dialog_episode_shownotes_close">Close</string>
    <string name="dialog_episode_shownotes_feed">Feed</string>
    <string name="dialog_episode_shownotes_title">Show Notes</string>
    <string name="dialog_episode_shownotes_website">Website</string>
    <string name="dialog_error_message_default">An error occurred</string>
    <string name="dialog_error_message_no_network">Connect to the Internet.</string>
    <string name="dialog_error_message_podcast_duplicate">This podcast is already part of your collection.</string>
    <string name="dialog_error_message_podcast_invalid_feed">This address is not an RSS feed.</string>
    <string name="dialog_error_title_default">Error</string>
    <string name="dialog_error_title_no_network">Offline</string>
    <string name="dialog_error_title_podcast_duplicate">Duplicate Podcast</string>
    <string name="dialog_error_title_podcast_invalid_feed">Invalid Podcast Feed</string>
    <string name="dialog_find_podcast_button_add">Add</string>
    <string name="dialog_find_podcast_hint">Name or feed address</string>
    <string name="dialog_find_podcast_no_results">No results found.</string>
    <string name="dialog_find_podcast_title">Find Podcast</string>
    <string name="dialog_generic_button_cancel">Cancel</string>
    <string name="dialog_generic_button_okay">OK</string>
    <string name="dialog_generic_details_button">Show details</string>
    <string name="dialog_generic_details_default">No details available</string>
    <string name="dialog_opml_import_button_okay">Import</string>
    <string name="dialog_opml_import_details_button">Show details</string>
    <string name="dialog_opml_import_details_default">No details available</string>
    <string name="dialog_opml_import_message_error">Could not import OPML file. No podcasts found.</string>
    <string name="dialog_opml_import_message">Add new podcasts? Duplicates will be removed before importing. Number of podcasts found:</string>
    <string name="dialog_opml_import_title">OPML Import</string>
    <string name="dialog_yes_no_message_add_up_next">Start listening to this episode right away?</string>
    <string name="dialog_yes_no_message_default">Do you really want to do this?</string>
    <string name="dialog_yes_no_message_delete_downloads">Delete downloaded episodes? You can download them again at any time.</string>
    <string name="dialog_yes_no_message_delete_episode">Delete this episode?</string>
    <string name="dialog_yes_no_message_mark_episode_played">Mark this episode as played?</string>
    <string name="dialog_yes_no_message_non_wifi_download">Your device is not connected to Wi-Fi. Download episode anyway?</string>
    <string name="dialog_yes_no_message_remove_podcast">Remove this podcast?</string>
    <string name="dialog_yes_no_message_update_collection">Look for new episodes?</string>
    <string name="dialog_yes_no_message_update_covers">Download latest version of all podcast covers?</string>
    <string name="dialog_yes_no_message_vpn_download">Your device is connected via VPN. Download episode anyway?</string>
    <string name="dialog_yes_no_negative_button_add_up_next">Add to \'Up Next\'</string>
    <string name="dialog_yes_no_negative_button_cancel">Cancel</string>
    <string name="dialog_yes_no_negative_button_default">No</string>
    <string name="dialog_yes_no_positive_button_add_up_next">Start Now</string>
    <string name="dialog_yes_no_positive_button_default">Yes</string>
    <string name="dialog_yes_no_positive_button_delete_downloads">Delete All</string>
    <string name="dialog_yes_no_positive_button_delete_episode">Delete</string>
    <string name="dialog_yes_no_positive_button_mark_episode_played">Mark as Played</string>
    <string name="dialog_yes_no_positive_button_non_wifi_download">Download anyway</string>
    <string name="dialog_yes_no_positive_button_remove_podcast">Remove</string>
    <string name="dialog_yes_no_positive_button_update_collection">Update</string>
    <string name="dialog_yes_no_positive_button_update_covers">Update</string>
    <string name="dialog_yes_no_positive_button_vpn_download">Download anyway</string>
    <string name="dialog_yes_no_title_default">Decide</string>
    <string name="player_up_next_headline">Up Next:</string>
    <string name="toast_message_adding_podcast">Adding podcast…</string>
    <string name="toast_message_adding_podcasts">Adding podcasts…</string>
    <string name="toast_message_collection_update_not_necessary">Podcast collection up-to-date.</string>
    <string name="toast_message_copied_to_clipboard">Copied to clipboard.</string>
    <string name="toast_message_deleting_downloads">Deleting downloaded episodes…</string>
    <string name="toast_message_downloading_episode">Downloading episode…</string>
    <string name="toast_message_entering_streaming_view">Secret Streaming View</string>
    <string name="toast_message_error_download_error">Download error</string>
    <string name="toast_message_error_feed_not_supported">Unsupported feed (application/Atom+XML).</string>
    <string name="toast_message_error_file_type_unknown">Unable to process download. File type:</string>
    <string name="toast_message_error_missing_storage_permission">Grant \"Read Storage\" permission to open this file.</string>
    <string name="toast_message_error_no_internet_connection">Unable to start playback. The device has no network connection.</string>
    <string name="toast_message_error_no_podcast_found">Unable to start playback. Please add a podcast first.</string>
    <string name="toast_message_error_no_podcast_matches_search">Unable to find a podcast that matches your search.</string>
    <string name="toast_message_error_refreshing_cover">Could not refresh cover. The feed does not contain a cover reference.</string>
    <string name="toast_message_error_validation_no_valid_episodes">RSS validation: Feed does not contain any valid episodes.</string>
    <string name="toast_message_error_validation_missing_cover">RSS validation: Feed does not contain a cover reference.</string>
    <string name="toast_message_debug_logging_to_file_started">Debug: Start writing to a local log file.</string>
    <string name="toast_message_debug_logging_to_file_stopped">Debug: Stop writing to a local log file.</string>
    <string name="toast_message_install_file_helper">Please install a file manager or a podcast player first.</string>
    <string name="toast_message_playback_speed_reset">Playback speed reset.</string>
    <string name="toast_message_refreshing_cover">Refreshing podcast cover.</string>
    <string name="toast_message_save_opml">Saving podcast collection as OPML.</string>
    <string name="toast_message_skipping_disabled">Playback is not running. Skipping is turned off.</string>
    <string name="toast_message_sleep_timer_unable_to_start">Please start listening to an episode first.</string>
    <string name="toast_message_theme_day">Switching to \'Day mode\' (long press detected)</string>
    <string name="toast_message_theme_follow_system">Switching to \'Follow System Setting mode\' (long press detected)</string>
    <string name="toast_message_theme_night">Switching to \'Night mode\' (long press detected)</string>
    <string name="toast_message_up_next_added_episode">Added episode to \'Up Next\' queue.</string>
    <string name="toast_message_up_next_removed_episode">Removed episode from \'Up Next\' queue.</string>
    <string name="toast_message_up_next_start_playback">Starting next episode…</string>
    <string name="toast_message_updating_collection">Updating podcast collection.</string>
    <string name="podcast_list_button_add_new_podcast">Add new podcast</string>
    <string name="podcast_list_button_settings">Settings</string>
    <string name="podcast_list_button_toggle_hide_older_episodes">Hide older episodes</string>
    <string name="podcast_list_button_toggle_show_older_episodes">Older episodes</string>
    <string name="notification_now_playing_channel_description">Playback controls, episode name and cover.</string>
    <string name="notification_now_playing_channel_name">Playback Controls</string>
    <string name="notification_dismiss">Dismiss notification</string>
    <string name="notification_pause">Pause</string>
    <string name="notification_play">Play</string>
    <string name="notification_playing">Playing…</string>
    <string name="notification_skip_back">Skip back</string>
    <string name="notification_skip_forward">Skip forward</string>
    <string name="pref_about_title">About</string>
    <string name="pref_advanced_title">Advanced</string>
    <string name="pref_app_version_summary">Version</string>
    <string name="pref_app_version_title">App Version</string>
    <string name="pref_background_refresh_summary_enabled">Looking for podcast episodes in background…</string>
    <string name="pref_background_refresh_summary_disabled">Not looking for podcast episodes in background.</string>
    <string name="pref_background_refresh_title">Background Refresh</string>
    <string name="pref_delete_all_summary">Delete downloaded episodes to free up space on your device. You can download them again at any time.</string>
    <string name="pref_delete_all_storage_space_available">Available</string>
    <string name="pref_delete_all_storage_space_used">Used</string>
    <string name="pref_delete_all_title">Delete Downloads</string>
    <string name="pref_episode_download_over_mobile_summary_enabled">Downloading podcast episodes over Wi-Fi and mobile network. Data charges may apply.</string>
    <string name="pref_episode_download_over_mobile_summary_disabled">Downloading podcast episodes over Wi-Fi only.</string>
    <string name="pref_episode_download_over_mobile_title">Download Over Mobile Network</string>
    <string name="pref_general_title">General</string>
    <string name="pref_maintenance_title">Maintenance</string>
    <string name="pref_opml_export_summary">Save your podcasts feeds to an OPML file that can be imported into other players.</string>
    <string name="pref_opml_export_title">Export OPML</string>
    <string name="pref_opml_import_summary">Select an OPML file from device storage.</string>
    <string name="pref_opml_import_title">Import OPML</string>
    <string name="pref_report_issue_summary">Report bugs and suggest improvements on GitHub.</string>
    <string name="pref_report_issue_title">Report Issue</string>
    <string name="descr_card_delete_episode_button">Remove downloaded episode</string>
    <string name="descr_card_playback_indicator">Playback progress</string>
    <string name="descr_card_small_download_button">Download</string>
    <string name="descr_card_small_playback_button">Play/pause</string>
    <string name="sample_text_episode_0_date" translatable="false">19 Aug 2005</string>
    <string name="sample_text_episode_0_title" translatable="false">As the Worm Turns</string>
    <string name="sample_text_podcast_name" translatable="false">Security Now</string>
    <string name="sample_text_shownotes" translatable="false">How a never-disclosed Windows vulnerability was quickly reverse-engineered from the patches to fix it and turned into more than 12 potent and damaging Internet worms in three days. What does this mean for the future of Internet security?</string>
</resources>