<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="24dp">

    <TextView
        android:id="@+id/dialog_opml_import_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_opml_import_title"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle" />

    <TextView
        android:id="@+id/dialog_opml_import_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/dialog_opml_import_message_error"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <TextView
        android:id="@+id/dialog_opml_import_details_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/dialog_generic_details_button"
        android:layout_gravity="center_horizontal"
        android:scrollbars="vertical"
        android:visibility="gone"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.Button" />

    <TextView
        android:id="@+id/dialog_opml_import_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/dialog_generic_details_default"
        android:textIsSelectable="true"
        android:scrollbars="vertical"
        android:visibility="gone"
        android:textAppearance="@android:style/TextAppearance.Small" />

</LinearLayout>