<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_shownotes"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/podcast_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:ellipsize="end"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="@color/text_default"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/sample_text_podcast_name" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/episode_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_horizontal_line"
        tools:text="@string/sample_text_episode_0_date" />

    <ImageView
        android:id="@+id/divider_horizontal_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/podcast_feed"
        app:srcCompat="@color/divider_line" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/episode_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="@color/text_default"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/episode_date"
        tools:text="@string/sample_text_episode_0_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/podcast_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:paddingBottom="4dp"
        android:singleLine="true"
        android:text="@string/dialog_episode_shownotes_website"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:textColor="@color/escapepod_red"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/podcast_name"
        app:layout_constraintTop_toBottomOf="@+id/podcast_name"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/divider_centered_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/podcast_website"
        app:layout_constraintStart_toEndOf="@+id/podcast_website"
        app:layout_constraintTop_toTopOf="@+id/podcast_website"
        app:srcCompat="@drawable/ic_centered_dot_16dp"
        tools:visibility="visible" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/podcast_feed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:paddingBottom="4dp"
        android:singleLine="true"
        android:text="@string/dialog_episode_shownotes_feed"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:textColor="@color/escapepod_red"
        app:layout_constraintStart_toEndOf="@+id/divider_centered_dot"
        app:layout_constraintTop_toBottomOf="@+id/podcast_name" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/shownotes_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/dialog_episode_shownotes_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="@color/text_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/episode_title" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shownotes_title">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/episodes_shownotes_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/text_default"
            android:textColorLink="@color/escapepod_red"
            android:textIsSelectable="true"
            tools:text="@string/sample_text_shownotes" />

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>