<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginBottom="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/episode_background"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/list_card_episode_background" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/episode_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/descr_episode_date"
        android:elevation="2dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:textColor="@color/text_lightweight"
        app:layout_constraintEnd_toStartOf="@+id/episode_download_button"
        app:layout_constraintStart_toStartOf="@+id/episode_background"
        app:layout_constraintTop_toTopOf="@+id/episode_background"
        tools:text="@string/sample_text_episode_0_date" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/episode_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="6dp"
        android:contentDescription="@string/descr_episode_title"
        android:elevation="2dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:textColor="@color/text_lightweight"
        app:layout_constraintBottom_toBottomOf="@+id/episode_background"
        app:layout_constraintEnd_toStartOf="@+id/episode_download_button"
        app:layout_constraintStart_toStartOf="@+id/episode_date"
        tools:text="@string/sample_text_episode_0_title" />

    <ImageView
        android:id="@+id/episode_download_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/descr_card_small_download_button"
        android:paddingStart="2dp"
        android:paddingTop="4dp"
        android:paddingEnd="2dp"
        android:paddingBottom="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/episode_background"
        app:layout_constraintEnd_toStartOf="@+id/episode_delete_button"
        app:layout_constraintTop_toTopOf="@+id/episode_background"
        app:srcCompat="@drawable/ic_cloud_download_36dp" />

    <ImageView
        android:id="@+id/episode_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:backgroundTint="@color/escapepod_transparent"
        android:clickable="true"
        android:contentDescription="@string/descr_card_delete_episode_button"
        android:elevation="2dp"
        android:focusable="true"
        android:paddingStart="4dp"
        android:paddingTop="12dp"
        android:paddingEnd="4dp"
        android:paddingBottom="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/episode_background"
        app:layout_constraintEnd_toStartOf="@+id/episode_play_button"
        app:layout_constraintTop_toTopOf="@+id/episode_background"
        app:srcCompat="@drawable/ic_delete_24dp" />

    <ProgressBar
        android:id="@+id/episode_playback_progress"
        android:layout_width="40dp"
        android:layout_height="0dp"
        android:background="@drawable/circular_progressbar_background"
        android:contentDescription="@string/descr_card_playback_indicator"
        android:indeterminateOnly="false"
        android:max="12"
        android:progress="12"
        android:progressDrawable="@drawable/circular_progressbar"
        android:rotation="270"
        android:scaleY="-1"
        app:layout_constraintBottom_toBottomOf="@+id/episode_play_button"
        app:layout_constraintEnd_toEndOf="@+id/episode_play_button"
        app:layout_constraintStart_toStartOf="@+id/episode_play_button"
        app:layout_constraintTop_toTopOf="@+id/episode_play_button"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/episode_play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:backgroundTint="@color/escapepod_transparent"
        android:clickable="true"
        android:contentDescription="@string/descr_card_small_playback_button"
        android:elevation="2dp"
        android:focusable="true"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/episode_background"
        app:layout_constraintEnd_toEndOf="@+id/episode_background"
        app:layout_constraintTop_toTopOf="@+id/episode_background"
        app:srcCompat="@drawable/ic_play_symbol_24dp" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/episode_playback_views"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:constraint_referenced_ids="episode_delete_button, episode_play_button, episode_playback_progress" />

</androidx.constraintlayout.widget.ConstraintLayout>