<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:background="@color/list_card_streaming_episode_background">

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:importantForAccessibility="no"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/streaming_episode_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:elevation="2dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textColor="@color/text_default"
        app:layout_constraintEnd_toStartOf="@+id/streaming_episode_play_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/sample_text_episode_0_date" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/streaming_episode_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:elevation="2dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textColor="@color/text_lightweight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/streaming_episode_play_button"
        app:layout_constraintStart_toStartOf="@+id/streaming_episode_date"
        app:layout_constraintTop_toBottomOf="@+id/streaming_episode_date"
        tools:text="@string/sample_text_episode_0_title" />

    <ImageButton
        android:id="@+id/streaming_episode_play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:backgroundTint="@color/default_transparent"
        android:contentDescription="@string/descr_card_small_playback_button"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_cloud_play_36dp" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/streaming_episode_playback_views"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:constraint_referenced_ids="streaming_episode_play_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
